2005-03-03  Daniel Macks  <dmacks@netspace.org>

	* postinstall.pl.in: Automatic compatibility for when enhanced
	choose_mirrors is released.

2005-03-03  Daniel Macks  <dmacks@netspace.org>

	* postinstall.pl.in: Prepare for enhanced choose_mirrors functionality

2005-03-02  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* README.buildsystem, fink-mirrors.info.in: minor revision to buildsystem

2005-02-25 David H <dmalloc@users.sourceforge.net>
	* master, rsync: New mirror in Mississippi
	rsync as well as distfiles, thanks to mdjoy@phy.olemiss.edu

2005-01-12  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Releasing version 0.23.5.2 of fink-mirrors

2005-01-12	David H <dmalloc@users.sourceforge.net>
	* master, rsync: Ne HE-Net mirror.
	rsync as well as distfiles, thanks to colm.maccarthaigh@heanet.ie

2005-01-02  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* all: updated Copyright notice

2004-12-20  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Releasing version 0.23.5.1 of fink-mirrors

2004-12-03  Peter O'Gorman  <peter@pogma.com>

	* gnu: update to latest from http://www.gnu.org_order/ftp.html having
	checked that they actuall work.
	* _keys: add Bosnia & Herzegovina

2004-09-24  David H. <dmalloc@users.sourceforge.net>
	* master: Removing  distfiles.lha.uk.eu.finkmirrors.net
	failure to comply with our mirror rules, admin has been warned often
	enough. Belnet mirror makes more than up for this.

2004-08-20  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Releasing version 0.22.1.1 of fink-mirrors

2004-08-17  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Releasing version 0.21.1.1 of fink-mirrors

2004-08-17 David H. <dmalloc@users.sourceforge.net>
	* master, rsync: Added new mirror for Europe
	Maintainer: bernard.grymonpon@belnet.be
	Info: Belnet, the Belgian Education and Research network. 
	Our network spans across Belgium and is connected to several